# MortalCompany

./: CMakeLists.txt  README.md
include/: EBO.h  VBO.h  camera.h  drawable.h  elements.h  light.h  mesh.h  model.h  node.h  shape.h  sphere.h  texture.h
include/buffers/: general_buffer.hpp  vao_buffer.hpp
include/managers/: buffer_manager.hpp
include/objects/: object3D.h
include/physics/: AABB.h
include/renders/: triangles_object.h
models/: license.txt  player.glb  scene.gltf
shaders/: default.frag  default.frag.txt  default.vert  default.vert.txt  node.vert
src/: CMakeLists.txt  camera.cpp  drawable.cpp  elements.cpp  main.cpp  mesh.cpp  model.cpp  node.cpp  shaderClass.cpp  shape.cpp  sphere.cpp  test.txt  texture.cpp
src/buffers/: general_buffer.cpp  vao_buffer.cpp
src/objects/: object3D.cpp
src/renders/: triangles_object.cpp
